src/objects/Test_Execution__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the execution of a test script in a specific case.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Status__c</fullName>
        <formula>TEXT(Defect__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <inlineHelpText>Please select the environment where the test was or should be performed.</inlineHelpText>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACNQA</fullName>
                </value>
                <value>
                    <fullName>CCPQ1</fullName>
                </value>
                <value>
                    <fullName>CCPQ2</fullName>
                </value>
                <value>
                    <fullName>CNGOEP</fullName>
                </value>
                <value>
                    <fullName>DCRM</fullName>
                </value>
                <value>
                    <fullName>DCRM1</fullName>
                </value>
                <value>
                    <fullName>ICPQ</fullName>
                </value>
                <value>
                    <fullName>ICRM</fullName>
                </value>
                <value>
                    <fullName>INGOEP</fullName>
                </value>
                <value>
                    <fullName>MAY21</fullName>
                </value>
                <value>
                    <fullName>PRODUCTION</fullName>
                </value>
                <value>
                    <fullName>QCRM</fullName>
                </value>
                <value>
                    <fullName>QCRM3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date of test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Type of test execution</description>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Sprint UAT</fullName>
                </value>
                <value>
                    <fullName>E2E - UAT</fullName>
                </value>
                <value>
                    <fullName>Hypercare</fullName>
                </value>
                <value>
                    <fullName>Production Validation</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>Sanity Test</fullName>
                </value>
                <value>
                    <fullName>E2E SIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Hot fix:6th Dec 2017</description>
        <formula>Test_Script__r.Test_Scenario__r.Request__r.Sprint__r.Release__r.Name</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of test execution</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <label>Test Result</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Test Execution</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select a Tester if you are not executing Test Script. If you leave this field blank, you will be automatically  Tester.</inlineHelpText>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Execution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tester__c</columns>
        <columns>Test_Script__c</columns>
        <columns>Execution_Date__c</columns>
        <columns>Result_Details__c</columns>
        <columns>Test_Result__c</columns>
        <columns>Defect__c</columns>
        <columns>Execution_Type__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>NGOEP</value>
        </filters>
        <filters>
            <field>Execution_Type__c</field>
            <operation>equals</operation>
            <value>Regression Test</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestExecution-{0000000000}</displayFormat>
        <label>Test Execution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Test_Result_Blocked</fullName>
        <active>true</active>
        <description>Added Validation Rule to field Defect: if Test Result is Blocked. User needs to select an existing Defect.</description>
        <errorConditionFormula>ISPICKVAL( Test_Result__c , &quot;Blocked&quot;) &amp;&amp; ISBLANK(Defect__c )</errorConditionFormula>
        <errorDisplayField>Defect__c</errorDisplayField>
        <errorMessage>If Test Result is Blocked, please select an existing Defect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Result_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Test_Result__c , &quot;Fail&quot;)  &amp;&amp;  ISBLANK(Defect__c )</errorConditionFormula>
        <errorDisplayField>Defect__c</errorDisplayField>
        <errorMessage>If Test Result is Fail, please create Defect.</errorMessage>
    </validationRules>
</CustomObject>